# immutabledict

./: README.md  pyproject.toml
immutabledict/: __init__.py  _immutabledict.py
