[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "immutabledict"
version = "1.0.0"
authors = [
  {name="Filipi565"},
]
description = "ImmutableDict"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Source = "https://github.com/Filipi565/immutabledict"
Issues = "https://github.com/Filipi565/immutabledict/issues"